--- a/short_version/experimentations.tex
+++ b/short_version/experimentations.tex
@@ -101,7 +101,7 @@ The figure \ref{fig:me_local} illustrate the local preferential attachments by p
       \multirow{2}{*}{\textbf{Empirical}}  &
       \multicolumn{2}{c}{Global} & \multicolumn{2}{c}{Local}\\
       \cmidrule(r){2-3} \cmidrule(l){4-5}
-      &   pvalue &   alpha   & pvalue & alpha   \\
+      &   $p$-value &   $\alpha$   & $p$-value & $\alpha$   \\
   	\hline
     Network 1     &    1.0 &   2.4 & 1.0 $\pm$ 0.0  &  2.4 $\pm$ 0.5  \\
     Network 4     &    0.0 &   1.3 & 0.6 $\pm$ 0.5  &  1.5 $\pm$ 0.2 \\
