first local review

--- a/short_version/PNAS-main.tex
+++ b/short_version/PNAS-main.tex
@@ -152,7 +152,7 @@ In the typical use of the above models for link prediction, some observations (\
 \input{experimentations}
 
 \section{Conclusion}
-In this paper we study two fundamentals properties that arise in social networks in the spectrum of Bayesian models. We proposed a probabilistic formalization of those properties and analyze how models comply with it. We showed how two families of models characterized by they prior on some latent features can conduct either to comply or not with the local preferential attachment as well as the behavior of the homophily within two appropriate similarities.
+In this paper we study two fundamentals properties that arise in social networks in the spectrum of Bayesian models. We proposed a probabilistic formalization of those properties and analyze how models comply with it. We showed how two families of models characterized by they prior on some latent features can conduct either to comply or not with the local preferential attachment as well as the behavior of the homophily within two appropriate similarities. This results give insight on the relation between the quality of a link prediction models and properties arising in social networks (Preferential attachment and homophily). To conclude, we think take one can take advantage of this study to better choose and design models depending on prior knwoledge on the data.
 
 \bibliographystyle{unsrt}
 \bibliography{./pnas}
