--- a/short_version/experimentations.tex
+++ b/short_version/experimentations.tex
@@ -25,8 +25,8 @@ The measures considered to evaluate the preferential attachment rely on a goodne
 %In the context of latent models, while there is no ambiguity in computing the overall degree distribution, it is less obvious for the local case. We explain here the computation of the local degree distribution for each models according to section \ref{sec:burstiness} :
 The computation of the local degree distribution for each model defined according to section \ref{sec:burstiness} is detailed below: 
 \begin{itemize}
-        \item For each network learned with IMMSB, the tensor $Z$ indicates the membership of the nodes for each  interaction. In order to draw the local degree distribution for a factor $k$, we reduce the adjacency matrix in order to retain only the links that occur for the factor $k$. The local degree distribution is thus computed on the reduced adjacency matrix  $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , z_{i\rightarrow j}=k, z_{i\leftarrow j}=k\}$. \textbf{termes a 0}
-       \item for ILFM, each node $i$ is associated with a fix feature vector $\mat{f}_{i}$ ; the local degree distribution for the factor $k$ is obtained by taking into account only the contribution of this feature $k$ on the adjacency matrix. Thus, the local degree degree distribution is computed on the reduced adjacency matrix defined by $Y^c =\{ y_{ij}^c=1 \ \textrm{if}\ y_{ij}=1 , f_{ic}=1, f_{jc}=1\}$. \textbf{termes a 0}
+    \item For each network learned with IMMSB, the tensor $Z$ indicates the membership of the nodes for each  interaction. In order to draw the local degree distribution for a factor $k$, we reduce the adjacency matrix in order to retain only the links that occur for the factor $k$. The local degree distribution is thus computed on the reduced adjacency matrix  $Y^k =\{ y_{ij}^k=1 \ \textrm{if}\ y_{ij}=1 , z_{i\rightarrow j}=k, z_{i\leftarrow j}=k; 0 \ \textrm{otherwise} \}$.
+        \item for ILFM, each node $i$ is associated with a fix feature vector $\mat{f}_{i}$ ; the local degree distribution for the factor $k$ is obtained by taking into account only the contribution of this feature $k$ on the adjacency matrix. Thus, the local degree degree distribution is computed on the reduced adjacency matrix defined by $Y^c =\{ y_{ij}^c=1 \ \textrm{if}\ y_{ij}=1 , f_{ic}=1, f_{jc}=1; 0 \ \textrm{otherwise}\}$.
 \end{itemize}
 
 \subsection{Homophily Measures}
@@ -90,7 +90,7 @@ The inference procedure was run with these settings for the four datasets previo
 
 \textbf{mettre ailleurs}All our experimental platform is available online \footnote{https://github.com/dtrckd/pymake}. It is an ongoing development in order to provide a flexible way to design, make and share and experiments for data analysis in order to improve the ability of the community to do reproducible research.
 
-Table \ref{table:me_gofit} reports the value of the power-law goodness of fit for IMMSB and ILFM in the global case (right) and in the local case (left). It appears that for the both models, the global preferential attachment is only verified in the generated networks learned from datasets where the property was verified, namely in Network 1 with p-value equals to 0.9 for IMMSB and 1 for ILFM, and in Blogs with a p-value equals to 1 for the both models whereas the property is not verified in Network 4 and in Manufacturing (p-value = 0). This is in accordance with Proposition 2.1 \textbf{mettre ref} according which both ILFM and IMMSB do not satisfy global preferential attachment. However these models are able to capture this property if it exists in the learning dataset.  Moreover we can observed that, in the local case, IMMSB complies with the preferential attachment with a maximal p-value for the four networks while ILFM obtained low p-values for the networks that were less locally bursty with a value of 0.5 and 0.3 respectively for Network4 and Manufacturing. \textbf{que conclue tu de la phrase suivante} \textcolor{red}{Donc que plus alpha est proche de (loi constante) moins le burstiness est significatif...} Also, the mean value of the power-law coefficient $\alpha$ is significantly greater for IMMSB than for ILFM for the different datasets with stronger values for the strongest locally bursty networks Network1 and Blogs.
+Table \ref{table:me_gofit} reports the value of the power-law goodness of fit for IMMSB and ILFM in the global case (right) and in the local case (left). It appears that for the both models, the global preferential attachment is only verified in the generated networks learned from datasets where the property was verified, namely in Network 1 with p-value equals to 0.9 for IMMSB and 1 for ILFM, and in Blogs with a p-value equals to 1 for the both models whereas the property is not verified in Network 4 and in Manufacturing (p-value = 0). This is in accordance with Proposition 2.1 \textbf{mettre ref} according which both ILFM and IMMSB do not satisfy global preferential attachment. However these models are able to capture this property if it exists in the learning dataset.  Moreover we can observed that, in the local case, IMMSB complies with the preferential attachment with a maximal p-value for the four networks while ILFM obtained low p-values for the networks that were less locally bursty with a value of 0.5 and 0.3 respectively for Network4 and Manufacturing. \textbf{que conclue tu de la phrase suivante} \textcolor{red}{Donc que plus alpha est proche de 1 (loi constante), moins le burstiness est significatif...} Also, the mean value of the power-law coefficient $\alpha$ is significantly greater for IMMSB than for ILFM for the different datasets with stronger values for the strongest locally bursty networks Network1 and Blogs.
 
 The figure \ref{fig:me_local} illustrates the local preferential attachments by plotting the average local degree distribution for the artificial networks \textbf{average pas trrivial ?}  Network1 (left) and Network4 (right) learned with IMMSB (top) and ILFM (bottom). The shape of local degree distribution appears more bursty for IMMSB and with more fluctuations for ILFM which can be explained by the deficiency of ILFM to comply with local preferential attachment property as demonstrated in Proposition 2.2 \textbf{ref}.
  
