--- a/short_version/pnas.bib
+++ b/short_version/pnas.bib
@@ -1,3 +1,20 @@
+
+
+@article{Blondel2008,
+  author    = {Vincent D. Blondel and
+               Jean{-}Loup Guillaume and
+               Renaud Lambiotte and
+               Etienne Lefebvre},
+  journal   = {Journal of statistical mechanics: theory and experiment},
+  title     = {{Fast unfolding of community  in large networks}},
+  year      = {2008},
+
+  volume    = {10},
+  pages = {P10008}
+}
+
+
+
 @article{largeron2015,
     author = {Largeron, Christine AND Mougel, Pierre-Nicolas AND Rabbany, Reihaneh AND Za{\"\i}ane, Osmar R.},
     journal = {PLoS ONE},
