--- a/short_version/PNAS-main.tex
+++ b/short_version/PNAS-main.tex
@@ -152,7 +152,14 @@ In the typical use of the above models for link prediction, some observations (\
 \input{experimentations}
 
 \section{Conclusion}
-In this paper we study two fundamentals properties that arise in social networks in the spectrum of Bayesian models. We proposed a probabilistic formalization of those properties and analyze how models comply with it. We showed how two families of models characterized by they prior on some latent features can conduct either to comply or not with the local preferential attachment as well as the behavior of the homophily within two appropriate similarities. This results give insight on the relation between the quality of a link prediction models and properties arising in social networks (Preferential attachment and homophily). To conclude, we think take one can take advantage of this study to better choose and design models depending on prior knwoledge on the data.
+In this article, our aim was to study whether stochastic mixed membership models such as ILFM and IMMSB can generate networks having  properties frequently verified in real  social networks, namely  homophily and preferential attachment. 
+In this aim, we have introduced formal definitions of  these properties and  analysis the behavior of these models in this theoretical  framework. We have shown that the models satisfy the homophily with the similarity that underlies them but, that it is not the case for the natural similarity. 
+
+Concerning the preferential attachment, the models do not comply with the preferential attach, defined on the whole network. However, the situation is more contrasted when the property is considered at the local level in other words for the communities. In that case, we show that IMMSB complies the property whereas ILFM does not.
+
+Finally, experiments done on real and artificial networks have been presented to illustrate our theoretical results. They show that even if there is not a theoretical guarantee that the networks generated  have the  properties, these models are able to generate networks verifying these both properties if they are  strongly present in the dataset used to learn the model.
+
+% In this paper we study two fundamentals properties that arise in social networks in the spectrum of Bayesian models. We proposed a probabilistic formalization of those properties and analyze how models comply with it. We showed how two families of models characterized by they prior on some latent features can conduct either to comply or not with the local preferential attachment as well as the behavior of the homophily within two appropriate similarities. This results give insight on the relation between the quality of a link prediction models and properties arising in social networks (Preferential attachment and homophily). To conclude, we think take one can take advantage of this study to better choose and design models depending on prior knwoledge on the data.
 
 \bibliographystyle{unsrt}
 \bibliography{./pnas}
